[gd_scene load_steps=4 format=3 uid="uid://wm0w2afamf7r"]

[ext_resource type="Script" path="res://scripts/loss_buddha_minigame.gd" id="1_6wu4g"]
[ext_resource type="Texture2D" uid="uid://x0yni8r3lcpi" path="res://art/character_profiles/no_button.png" id="2_umlnq"]
[ext_resource type="Texture2D" uid="uid://bcf6ura7e1am2" path="res://art/character_profiles/yes_button.png" id="3_1k63w"]

[node name="loss_buddha_minigame" type="Node2D"]
script = ExtResource("1_6wu4g")

[node name="Label" type="Label" parent="."]
offset_left = -55.0
offset_top = -47.0
offset_right = 57.0
offset_bottom = 2.0
text = "game over
play again?"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(6, 6)

[node name="no_button" type="TextureButton" parent="."]
offset_left = 16.0
offset_top = 14.0
offset_right = 66.0
offset_bottom = 47.0
texture_normal = ExtResource("2_umlnq")

[node name="yes_button" type="TextureButton" parent="."]
offset_left = -71.0
offset_top = 16.0
offset_right = -17.0
offset_bottom = 49.0
texture_normal = ExtResource("3_1k63w")

[connection signal="pressed" from="no_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="yes_button" to="." method="_on_yes_button_pressed"]
